<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.minborg</groupId>
        <artifactId>instant-speed</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>zgc</artifactId>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>

                    <execution>
                        <id>ZGC</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>-Xmx1G</argument>
                                <argument>-XX:+UseZGC</argument>
                                <argument>-Xlog:gc</argument>
                                <argument>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argument>
                                <argument>org.minborg.instantspeed.zgc.LatencyBenchmark</argument>
                            </arguments>
                            <classpathScope>compile</classpathScope>
                        </configuration>
                    </execution>

                    <execution>
                        <id>ParallelGC</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>-Xmx1G</argument>
                                <argument>-verbose:gc</argument>
                                <argument>-XX:+PrintGCDetails</argument>
                                <argument>org.minborg.instantspeed.zgc.LatencyBenchmark</argument>
                            </arguments>
                            <classpathScope>compile</classpathScope>
                        </configuration>
                    </execution>


                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>chronicle-queue</artifactId>
            <version>5.20.22</version>
        </dependency>

    </dependencies>

</project>